--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "dw-compendium",
   "private": true,
-  "version": "0.0.0",
-  "homepage": "https://qesting.github.io/dw",
+  "version": "0.12.0",
+  "homepage": "https://github.com/Qesting/qesting.github.io",
+  "author": {
+    "name": "Qesting"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,7 +20,8 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-router": "^6.27.0",
-    "react-string-replace": "^1.1.1"
+    "react-string-replace": "^1.1.1",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -25,9 +29,9 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
+    "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.35.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
