--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-router": "^6.27.0",
+    "react-router-dom": "^6.30.0",
     "react-string-replace": "^1.1.1",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "regex": "^6.0.1",
+    "regex-recursion": "^6.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
